# soundblaster-g6x-linux-controller

./: Cargo.toml  README.md
frontend/src/: app.html
frontend/src/routes/: +page.svelte
src/: api.rs  main.rs  server.rs  tests.rs
tools/: Cargo.toml  README.md
tools/src/: main.rs
